--- a/style.css
+++ b/style.css
@@ -319,6 +319,7 @@ button {
 
 body {
   font-family: "Inter", sans-serif;
+  min-height: 100dvh;
   background: linear-gradient(345deg, rgb(32, 44, 46) 0%, rgb(52, 93, 60) 100%);
 }
 body::before, body::after {
