--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -6,6 +6,7 @@
 
 body {
   font-family: "Inter", sans-serif;
+  min-height: 100dvh;
   background: linear-gradient(
     345deg,
     rgba(32, 44, 46, 1) 0%,
