--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ button {
 }
 .hero .bundles__tariff {
   box-sizing: content-box;
-  padding: 38px 5vw 28px 5vw;
+  padding: 38px 60px 28px 60px;
   width: 214px;
   min-height: 500px;
   font-size: 12px;
@@ -272,10 +272,10 @@ button {
 .hero .bundles__tariff-subtitle::after {
   position: absolute;
   top: 100%;
-  left: -5vw;
+  left: -60px;
   content: "";
   height: 1px;
-  width: calc(100% + 10vw);
+  width: calc(100% + 120px);
   background-color: rgba(255, 255, 255, 0.1);
 }
 .hero .bundles__tariff__features-title {
